# dn-institute

./: .coderabbit.yaml  .env  .env.example  .gitignore  .prettierignore  .prettierrc  2021-05-19-PancakeBunny  2024-01-15-bitcoin-spike.md  2024-01-20-ethereum-correction.md  App.js  CNAME  CODEOWNERS  CONTRIBUTING.md  DEPLOY.md  ISSUE_BODY.md  LICENSE  Market Manipulation Widget.md  PR_BODY_277.md  README-AI-PRODUCT.md  README-DEV.md  README-WEBHOOK-SETUP.md  README.md  README_shanaboo.md  _config.yml  _shanaboo.patch  ai-product-submission.md  bugfix.js  channels.py  commit message  config.toml  config.yml  custom.css  fact-check.py  index.js  index.md  metric-chart.html  metric_analysis_prompt.txt  null  package-lock.json  package.json  (+13 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: ai-product-challenge.md  ai-product-submission.md
.github/prompts/: risk-scorer.txt
.github/webhooks/: qa-bot.yml
.github/workflows/: ai-content-generator.yml  ai-product-validator.yml  article-check-claude-v2.yml  article-check-claude.yml  article-check-cloudflare.yml  article-check.yml  chestnut-intelligence.yml  crypto-threat-analyzer.yml  defi-sentinel.yml  deploy-worker.yml  deploy.yml  duplication-check.yml  fact-check-comment.yaml  (+12 more)
.github/workflows /: format.yml  gh-pages.yml
__tests__/: api.test.ts
_layouts/: market-intelligence.html
app/: layout.tsx  page.tsx
archetypes/: trend-report.md
assets/: _collapsible.scss  _custom.scss  _fonts.scss  _icons.scss  main.scss
cf-article-checker/: README.md  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
challenges/: ai-product-challenge.md
cloudflare-worker/: .dev.vars.example  .gitignore  README.md  package.json  tsconfig.json  wrangler.toml
components/: SocialShare.tsx
config/: settings.json
content/: 2023-04-15-Hundred-Finance.md  _index.md
crypto_threat_analyzer/: .env.example  README.md  main.py  requirements.txt
data/: .gitkeep  events.json
datasets/: huobi-executed-order-feeds.csv  huobi-order-book-snapshots.csv
docs/: RAG_IMPLEMENTATION.md  dynamic-charts.md  echarts-shortcode.md  index.html
examples/: ai-product-examples.json
layouts/: README.md  home.html
market maipulation widget/: binance-ava-usdt.json  bybit-ava-usdt.json  bybit-ava-usdt_2.json  code.py  gateio-ava-usdt.json
payout-calc/: __main__.py  pyproject.toml
scripts/: ai_crypto_analyzer.py  analyze.js  api-call.js  chestnut_intelligence.py  post-twitter.js
shanaboo/: shanaboo_solution_1772450449_0.py  shanaboo_solution_1772450449_1.py  shanaboo_solution_1772450449_2.py  shanaboo_solution_1772450449_3.py  shanaboo_solution_1772450449_4.py  shanaboo_solution_1772450449_5.py  shanaboo_solution_1772450449_6.py  shanaboo_solution_1772450629_0.py  shanaboo_solution_1772450928_2.py  shanaboo_solution_1772450928_3.py  shanaboo_solution_1772450928_4.py  shanaboo_solution_1772450944_1.py  shanaboo_solution_1772450944_2.py  shanaboo_solution_1772450944_3.py  shanaboo_solution_1772450944_4.py  shanaboo_solution_1772469580_0.py  shanaboo_solution_1772469580_1.py  shanaboo_solution_1772469580_2.py  shanaboo_solution_1772469580_3.py  shanaboo_solution_1772469580_4.py  shanaboo_solution_1772469580_5.py
solution/: .env  Pipfile  main.py  models.py
src/: ingest.py  main.py  null  null_shanaboo  template.html
static/: index.html
tests/: test_article_checker_claude.py  test_chart_renderer.py  test_duplication_checker.py  test_duplication_checker_prompt.py  test_rag.py
tools/: README.md  article_checker.py  article_checker_claude.py  config.json  config.py  dictionary.txt  fact_checker.py  format_checker.py  git.py  grammar_checker.py  llm_utils.py  market_health_reporter.py  payout_calc.py  payout_calc.yml  report_graphics_tool.py  style_checker.py  utils.py
tools/similarity_search_rs/: Cargo.toml  package.json
tools/similarity_search_rs/src/: lib.rs
washwatch/: README.md  index.html  package.json
worker/: README.md  index.js  index.ts  package.json  wrangler.toml
workers/: package-lock.json  package.json  qa-bot-worker.js  qa-bot-worker.toml  qa-bot.js  tsconfig.json  worker.toml  wrangler.toml
(+1824 files in other folders)
