[tool.poetry]
name = "product-kit-template"
version = "1.0.1"
description = "A template for building and deploying AI products using the Product Development Kit."
authors = ["Distributed Networks Institute"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
pandas = "^1.3"
scikit-learn = "^0.24"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
packages = [
    { include = "tools/payout_calc" },
    { include = "tools/article_checker" },
    { include = "tools/market_health_reporter" },
    { include = "tools/python_modules" }
]

[tool.poetry.dependencies]
python = ">=3.8, <4"
PyGithub = "^1.58.2"
requests = "^2.32.0"
duckduckgo-search = "^3.1.1"
openai = "^0.27.7"
tiktoken = "^0.4.0"
pyyaml = "^6.0.1"
pylanguagetool = "^0.9.2"
markdown2 = "^2.4.10"
bs4 = "^0.0.1"
anthropic = "^0.25.1"
tenacity = "^8.2.3"
matplotlib = "3.6.0"
pandas = "2.0.1"
bleach = "^6.1.0"

[tool.poetry.scripts]
payout-calc = "tools.payout_calc.payout_calc:main"
article-check-claude = "tools.article_checker.article_checker_claude:main"
duplication-check = "tools.article_checker.duplication_checker:main"
market-health-reporter = "tools.market_health_reporter.market_health_reporter:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
