# 🌰🌰 pyproject.toml for Product Development Kit 🌰🌰
[tool.poetry]
name = "product-kit-template"
version = "0.1.0"
description = "A comprehensive template for building and deploying AI products."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0" # For making HTTP requests to GitHub API and LLM worker
PyGithub = "^2.2.0" # Optional: A more robust way to interact with GitHub API, if preferred over direct requests

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
# Existing scripts
duplication-check = "tools.duplication_check.main:main"
article-check-claude = "tools.article_check_claude.main:main"
payout-calc = "tools.payout_calc.main:main"
market-health-reporter = "tools.market_health_reporter.main:main"
# 🌰 New TrendLens AI script 🌰
trend-lens-reporter = "tools.trend_lens.main:main" 
